--- a/helloWorld.html
+++ b/helloWorld.html
@@ -9,6 +9,7 @@
 <body>
     <h1>sitio web cool</h1>
     <p>saludos people</p>
+    <p>por favor cuentame que te parecio el curso</p>
     
 </body>
 </html>
